# ensemble-learning-tutorial

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  conf.py  docker-compose.yml  ensembles.ipynb  env.example  pyproject.toml  pytest.ini  quickstart.rst  requirements-dev.txt  requirements.txt  setup.sh  test-ci-local.sh  test-ci-simple.sh
.devcontainer/: devcontainer.json
.github/: SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docker-publish.yml
data/: adult.parquet  simple.csv
docs/: index.rst  installation.rst
scripts/: run_notebook.py  validate_data.py
tests/: __init__.py  conftest.py  test_data_validation.py  test_ensemble_methods.py
